 - Support varible speed (PWM) rumble
 - Ability to cap fast forward speed
 - Finer control over FPS target
 - Holdable shortcut for rewinding one frame at a time
 - Ability to boot directly into the BIOS
 - Preliminary support for yanking out the game pak while a game is running
 - Thumb-drive mode by putting a file called portable.ini in the same folder
Bugfixes:
 - ARM7: Fix SWI and IRQ timings
 - GBA Audio: Force audio FIFOs to 32-bit
 - GBA Memory: Improve Thumb open bus behavior
 - VFS: Fix resource leaks if some allocations fail
 - Video: Fix an issue with very long filenames
 - GBA Video: Blended sprites should never have other effects applied
 - GBA: Fix crash if a 512kb flash save is loaded when a game has a 1Mb flash override
 - Qt: Better cleanup when a game crashes
 - Qt: Fix open ROM dialog filtering for archive formats
 - ARM7: Fix Thumb MUL timing
 - Qt: Cap the maximum number of multiplayer windows
 - Qt: Fix maximum year in sensor override
 - GBA: Cap audio FIFO read size during deserialization
 - GBA: Check for corrupted savestates when loading
 - GBA: Check for improperly sized savestates when loading
 - GBA: Check for savestates made from differently sized ROMs
 - GBA Video: Fix out-of-bounds tiles in mosaic
 - GBA Memory: Fix potential DMA issue when loading a savestate
 - GBA Audio: Fix audio pitch changing when adjusting buffer size
 - SDL: Fix SDL build when OpenGL is missing
 - ARM7: Fix timing of multiplies to use N cycles
 - GBA: Fix calls to endian-independent loadstores
 - GBA Video: Fix windows not affecting sprites
 - VFS: Fix line-reading to return proper values
 - GBA Memory: Fix load/store multiple video memory waitstates
 - GBA: Fix timing of reading from timer registers
 - Util: Allow loading IPS patches that grow the ROM
 - GBA Audio: Fix sample order in audio channel 3
 - GBA Audio: Fix 8-bit writes to audio channel 3 frequency
 - ARM7: ARMHotplugDetach should call deinit